# joblane

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
deployments/local.example/: config.json  provider-policy.json
docs/architecture/: README.md  contracts.md  openclaw-boundary.md
docs/jobs-to-be-done/: README.md
docs/operations/: README.md
docs/proof/: phase-1-bootstrap.md
examples/lane-packs/: README.md
joblane/: __init__.py  acceptance.py  cli.py  companion.py  contracts.py  control.py  doctor.py  drawers.py  executor.py  frontdoor.py  gates.py  lane_packs.py  lanes.py  ledger.py  memory.py  paths.py  proof.py  provider_policy.py  providers.py  runner.py  runtime.py  scheduler.py  schedules.py  scorecard.py  skill_export.py  surface_inbox.py  surfaces.py  workflows.py
lanes/chief_of_staff/: lane.json  providers.json  workflow.json
lanes/experiment/: lane.json  workflow.json
lanes/fitness/: lane.json  workflow.json
lanes/public_presence/: lane.json  providers.json  workflow.json
tests/: paths.py  test_acceptance.py  test_board_surface.py  test_cli.py  test_companion.py  test_doctor.py  test_drawers.py  test_effects.py  test_frontdoor.py  test_gate_contract.py  test_input_fixtures.py  test_lane_pack_conformance.py  test_lane_pack_executor.py  test_memory_contract.py  test_proof.py  test_provider_and_control.py  test_provider_policy.py  test_runner.py  test_runtime_jobs.py  test_scheduler.py  test_scorecard.py  test_skill_export.py  test_surface_inbox.py  test_surface_projection.py
(+27 files in other folders)
