[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "joblane"
version = "0.1.0"
description = "Job-serving agent lanes with durable ledger, gates, memory, surfaces, and provider workers."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
joblane = "joblane.cli:main"

[tool.setuptools]
packages = ["joblane"]

